// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TypePreset renders default 1`] = `
<DocumentFragment>
  .emotion-0 {
  font-family: "Noto Sans",sans-serif;
  font-size: 18px;
  line-height: 1.5555555555555556;
  font-weight: 400;
  -webkit-letter-spacing: -0.25px;
  -moz-letter-spacing: -0.25px;
  -ms-letter-spacing: -0.25px;
  letter-spacing: -0.25px;
}

<p
    class="emotion-0"
  />
</DocumentFragment>
`;

exports[`TypePreset renders responsive override body010 for xs and body030 for md breakpoints 1`] = `
<DocumentFragment>
  .emotion-0 {
  font-family: "Noto Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 400;
  -webkit-letter-spacing: -0.25px;
  -moz-letter-spacing: -0.25px;
  -ms-letter-spacing: -0.25px;
  letter-spacing: -0.25px;
}

@media screen and (min-width:960px) {
  .emotion-0 {
    font-family: "Noto Sans",sans-serif;
    font-size: 18px;
    line-height: 1.5555555555555556;
    font-weight: 400;
    -webkit-letter-spacing: -0.25px;
    -moz-letter-spacing: -0.25px;
    -ms-letter-spacing: -0.25px;
    letter-spacing: -0.25px;
  }
}

<p
    class="emotion-0"
  />
</DocumentFragment>
`;

exports[`TypePreset renders responsive override body010 for xs, body020 for sm, and body030 for md breakpoints 1`] = `
<DocumentFragment>
  .emotion-0 {
  font-family: "Noto Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 400;
  -webkit-letter-spacing: -0.25px;
  -moz-letter-spacing: -0.25px;
  -ms-letter-spacing: -0.25px;
  letter-spacing: -0.25px;
}

@media screen and (min-width:480px) {
  .emotion-0 {
    font-family: "Noto Sans",sans-serif;
    font-size: 16px;
    line-height: 1.5;
    font-weight: 400;
    -webkit-letter-spacing: -0.25px;
    -moz-letter-spacing: -0.25px;
    -ms-letter-spacing: -0.25px;
    letter-spacing: -0.25px;
  }
}

@media screen and (min-width:960px) {
  .emotion-0 {
    font-family: "Noto Sans",sans-serif;
    font-size: 18px;
    line-height: 1.5555555555555556;
    font-weight: 400;
    -webkit-letter-spacing: -0.25px;
    -moz-letter-spacing: -0.25px;
    -ms-letter-spacing: -0.25px;
    letter-spacing: -0.25px;
  }
}

<p
    class="emotion-0"
  />
</DocumentFragment>
`;

exports[`TypePreset renders responsive override body010 for xs, body020 for sm, and wrong for md breakpoints 1`] = `
<DocumentFragment>
  .emotion-0 {
  font-family: "Noto Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 400;
  -webkit-letter-spacing: -0.25px;
  -moz-letter-spacing: -0.25px;
  -ms-letter-spacing: -0.25px;
  letter-spacing: -0.25px;
}

@media screen and (min-width:480px) {
  .emotion-0 {
    font-family: "Noto Sans",sans-serif;
    font-size: 16px;
    line-height: 1.5;
    font-weight: 400;
    -webkit-letter-spacing: -0.25px;
    -moz-letter-spacing: -0.25px;
    -ms-letter-spacing: -0.25px;
    letter-spacing: -0.25px;
  }
}

<p
    class="emotion-0"
  />
</DocumentFragment>
`;

exports[`TypePreset renders responsive override body010 for xs, body020 for sm, body030 for md, code010 for lg breakpoints and ignore wrong prop 1`] = `
<DocumentFragment>
  .emotion-0 {
  font-family: "Noto Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 400;
  -webkit-letter-spacing: -0.25px;
  -moz-letter-spacing: -0.25px;
  -ms-letter-spacing: -0.25px;
  letter-spacing: -0.25px;
}

@media screen and (min-width:480px) {
  .emotion-0 {
    font-family: "Noto Sans",sans-serif;
    font-size: 16px;
    line-height: 1.5;
    font-weight: 400;
    -webkit-letter-spacing: -0.25px;
    -moz-letter-spacing: -0.25px;
    -ms-letter-spacing: -0.25px;
    letter-spacing: -0.25px;
  }
}

@media screen and (min-width:960px) {
  .emotion-0 {
    font-family: "Noto Sans",sans-serif;
    font-size: 18px;
    line-height: 1.5555555555555556;
    font-weight: 400;
    -webkit-letter-spacing: -0.25px;
    -moz-letter-spacing: -0.25px;
    -ms-letter-spacing: -0.25px;
    letter-spacing: -0.25px;
  }
}

@media screen and (min-width:1440px) {
  .emotion-0 {
    font-family: "Courier",monospace;
    font-size: 14px;
    line-height: 1.4285714285714286;
    font-weight: 400;
    -webkit-letter-spacing: 0;
    -moz-letter-spacing: 0;
    -ms-letter-spacing: 0;
    letter-spacing: 0;
  }
}

<p
    class="emotion-0"
  />
</DocumentFragment>
`;

exports[`TypePreset renders with override body010 1`] = `
<DocumentFragment>
  .emotion-0 {
  font-family: "Noto Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 400;
  -webkit-letter-spacing: -0.25px;
  -moz-letter-spacing: -0.25px;
  -ms-letter-spacing: -0.25px;
  letter-spacing: -0.25px;
}

<p
    class="emotion-0"
  />
</DocumentFragment>
`;
